# hackathon-2

./: .gitignore  AGENTS_STATUS.md  CLAUDE.md  HOW-TO-CHECK-AGENTS.md  PHASE-2-SETUP-SUMMARY.md  check-agents.sh  main.py  pyproject.toml
.claude/: mcp.json  settings.local.json
.claude/agents/: README.md  auth-specialist.md  backend-architect.md  frontend-builder.md
.claude/commands/: auth.md  backend.md  frontend.md
.claude/skills/: README.md  api-client-generator.md  auth-integration-helper.md  database-schema-generator.md  fastapi-generator.md  nextjs-component-generator.md
.specify/memory/: constitution.md
backend/: .env.example  CLAUDE.md  pyproject.toml
backend/app/: __init__.py
frontend/: .env.local.example  CLAUDE.md  next.config.ts  package.json
history/prompts/001-todo-app/: 0001-create-todo-app-feature-specification.spec.prompt.md  0002-create-todo-app-implementation-plan.plan.prompt.md  0003-generate-todo-app-implementation-tasks.tasks.prompt.md
history/prompts/constitution/: 0001-create-phase-i-constitution-with-all-feature-levels.constitution.prompt.md
history/prompts/general/: 001-summarize-hackathon-ii.general.prompt.md
specs/001-todo-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-todo-app/checklists/: requirements.md
specs/001-todo-app/contracts/: cli-commands.md
specs/phase-2/: SPECIFICATION-STRATEGY.md  architecture.md
specs/phase-2/api/: authentication.md  rest-endpoints.md
specs/phase-2/database/: schema.md
specs/phase-2/ui/: components.md
src/cli/: main.py
src/models/: priority.py  recurrence.py  task.py
src/services/: task_service.py
src/storage/: task_store.py
src/utils/: date_parser.py  formatters.py  validators.py
tests/: conftest.py
tests/edge_cases/: test_edge_cases.py
tests/unit/: test_date_parser.py  test_models.py  test_service.py  test_storage.py  test_validators.py
